--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 
 <div class="content">
   <h1>
-    S.Spartagus <p>Weds </p> S.Dharani Sri
+    Spartagus <p>Weds </p> Dharani Sri
   </h1>
   <button id="myBtn" onclick="myFunction()">Pause</button>
 </div>
